--- a/data_analysis.Rmd
+++ b/data_analysis.Rmd
@@ -25,27 +25,13 @@ library(plotly)
 connect <- dbConnect(RSQLite::SQLite(), "database.db")
 ```
 
-1.  Top 5 Suppliers (quantity of products supplied/ stock on hand)
+
 
 ```{r}
 product <- RSQLite::dbGetQuery(connect,'SELECT * FROM PRODUCT')
-top_suppliers<- product %>% group_by(supplier_id) %>% summarise(quantity=sum(stock_on_hand))
 
 ```
 
-```{r}
-top_5_suppliers <- top_suppliers %>% 
-  arrange(desc(quantity)) %>% 
-  slice(1:5)
-
-# Create a bar plot using Plotly
-plot_ly(data = top_5_suppliers, x = ~supplier_id, y = ~quantity, type = 'bar', 
-        marker = list(color = 'skyblue')) %>%
-  layout(title = "Top 5 Suppliers by Stock",
-         xaxis = list(title = "Supplier ID"),
-         yaxis = list(title = "Stock on Hand"),
-         showlegend = FALSE)
-```
 
 2.  Top 10 products based on the Profit
 
@@ -55,7 +41,7 @@ order_detail <- RSQLite::dbGetQuery(connect,'SELECT * FROM ORDER_DETAIL')
 discount <- RSQLite::dbGetQuery(connect,'SELECT * FROM DISCOUNT')
 
 profit_data <- order_item %>%
-  inner_join(order_detail, by = "order_id") %>% # Assuming order_id is the common key
+  inner_join(order_detail, by = "order_id") %>% 
   filter(order_status != "Cancelled") %>%
   inner_join(product, by = "product_id") %>%
   left_join(discount, by = c("promo_code" = "promo_code")) %>%
@@ -118,6 +104,49 @@ ggplot(top_selling_products, aes(x = reorder(product_id, Total_Sales), y = Total
         legend.text = element_text(size = 10), 
         plot.title = element_text(hjust = 0.5))
 ```
+
+
+
+```{r}
+library(dplyr)
+library(ggplot2)
+
+# Provided code: Calculate bundled and individual sales
+# (assuming 'order_item' and 'product' data frames are already loaded)
+
+# Join product with order item 
+product_order_item <- order_item %>%
+  inner_join(product, by = "product_id")
+
+# Calculate total quantity sold for bundled products
+bundled_sales <- product_order_item %>%
+  filter(!is.na(main_product_id)) %>%
+  group_by(main_product_id) %>%
+  summarise(Total_Quantity_Sold = sum(order_quantity, na.rm = TRUE)) %>%
+  ungroup() %>%
+  mutate(Product_Type = "Bundled")
+
+# Calculate total quantity sold for individual products
+individual_sales <- product_order_item %>%
+  filter(is.na(main_product_id)) %>%
+  group_by(product_id) %>%
+  summarise(Total_Quantity_Sold = sum(order_quantity, na.rm = TRUE)) %>%
+  ungroup() %>%
+  mutate(Product_Type = "Individual")
+
+
+total_sales_by_type <- bind_rows(bundled_sales, individual_sales) %>%
+  group_by(Product_Type) %>%
+  summarise(Total_Quantity_Sold = sum(Total_Quantity_Sold, na.rm = TRUE)) %>%
+  ungroup()
+
+
+
+```
+
+
+
+
 
 3.  Comparing the effectiveness of each Advertisement Type
 
@@ -218,7 +247,7 @@ ggplot(avg_rating_by_category, aes(x = Average_Rating, y = reorder(category_name
 ```
 
 ```{r}
-#library(lubridate)
+library(lubridate)
 time_period_sales<- RSQLite::dbGetQuery(connect,'SELECT ORDITM.order_id, order_quantity,order_date FROM ORDER_DETAIL ORDDET INNER JOIN ORDER_ITEM ORDITM ON ORDITM.order_id = ORDDET.order_id')
 #test
 time_period_sales$order_date <- as.Date(time_period_sales$order_date, format="%d/%m/%Y")
@@ -229,7 +258,7 @@ time_period_sales$order_date_mnth_yr <- factor(time_period_sales$order_date_mnth
 
 time_period_sales_group_by<- time_period_sales %>% group_by(order_date_mnth_yr)%>%summarise(quantity=sum(order_quantity))
 
-(ggplot(time_period_sales_group_by, aes(x = order_date_mnth_yr, y = quantity,group=1)) +  geom_point()+geom_line()+xlab('Time Period(year/month)')+ylab('Quantity Sold'))
+(ggplot(time_period_sales_group_by, aes(x = order_date_mnth_yr, y = quantity,group=1)) +  geom_point()+geom_line()+xlab('Time Period(year/mpnth)')+ylab('Quantity Sold'))
 ```
 
 ```{r}
@@ -252,8 +281,6 @@ ggplot1 <- ggplot(top_5_sales_per_region, aes(x = reorder(city,-quantity), y = q
 library(gridExtra)
 cust_order_product_join <-RSQLite::dbGetQuery(connect, 'SELECT city,ORDITM.order_quantity,unit_price FROM ADDRESS ADR INNER JOIN CUSTOMER CUST ON ADR.address_id= CUST.address_id INNER JOIN ORDER_DETAIL ORDDET ON ORDDET.customer_id = CUST.customer_id INNER JOIN ORDER_ITEM ORDITM ON ORDITM.order_id = ORDDET.order_id INNER JOIN PRODUCT PRD ON PRD.product_id = ORDITM.product_id')
 
-top_5_products <-RSQLite::dbGetQuery(connect, 'SELECT city,ORDITM.order_quantity,unit_price,PRD.product_id,PRD.product_name FROM ADDRESS ADR INNER JOIN CUSTOMER CUST ON ADR.address_id= CUST.address_id INNER JOIN ORDER_DETAIL ORDDET ON ORDDET.customer_id = CUST.customer_id INNER JOIN ORDER_ITEM ORDITM ON ORDITM.order_id = ORDDET.order_id INNER JOIN PRODUCT PRD ON PRD.product_id = ORDITM.product_id')
-
 #TEST
 
 cust_order_product_join$revenue <-  cust_order_product_join$order_quantity*cust_order_product_join$unit_price
@@ -269,39 +296,12 @@ revenue_per_product_region <- cust_order_product_join %>% group_by(city) %>% sum
 ggplot2 <- ggplot(top_5_revenue_per_region, aes(x = reorder(city, -rev), y = rev,fill=rev)) +  geom_bar(stat='identity')+scale_fill_gradient(low = "lightblue", high = "darkblue")+xlab('Top 10 cities with the maximum revenue')+ylab('Revenue')
 
 grid.arrange(ggplot1,ggplot2,nrow(1))
-
-top_5_products$revenue <- top_5_products$order_quantity*top_5_products$unit_price
-
-top_5_products_region <- top_5_products %>% group_by(city,product_name) %>% summarise(rev= sum(revenue))
-
-(top_5_products_region <- top_5_products_region %>% filter(city %in% head(top_5_revenue_per_region$city,2)) %>% select(product_name))
 ```
 
 ```{r}
 #Calculating Marketplace fee
 merged_product_fee <- product %>%
-  inner_join(select(category, category_id, category_fee, category_name), by = "category_id")
-category_fee <- order_item %>%
-  inner_join(select(order_detail, order_id, order_status), by = "order_id") %>%
-  inner_join(select(merged_product_fee, product_id, product_name, unit_price, category_fee, category_id, category_name), by = "product_id") %>%
-  filter(order_status == "Completed") %>%
-  mutate(marketplace_fee = order_quantity * unit_price * category_fee/100) %>%
-  mutate(cat_total_sales = order_quantity * unit_price) %>%
-  group_by(category_id, category_name) %>%
-  summarise(total_fee = sum(marketplace_fee), total_sales = sum(cat_total_sales)) %>%
-  inner_join(select(avg_rating_by_category, category_id, Average_Rating), by = 'category_id')
-
-
-#cat_total_sales = order_quantity * unit_price
-#Visualise
-
-
-# Plotting the total marketplace fee for each category with bars in descending order and custom blue colors
-ggplot(category_fee, aes(x = reorder(category_name, -total_fee))) +
-  geom_bar(aes(y = total_sales, fill = "Total Sales"), stat = "identity", position = position_dodge(width = 0.9), alpha = 0.7) +
-  geom_bar(aes(y = total_fee, fill = "Marketplace Fee"), stat = "identity", position = position_dodge(width = 0.9)) +
-  scale_fill_manual(name = "Category", values = c("Marketplace Fee" = "#3182bd", "Total Sales" = "#31a354")) +
-  labs(title = "Marketplace Fee vs Total Sales by Category", x = "Category", y = "Amount, USD") +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-```
+  inner_join(select(category, category_fee), by = "category_id")
+order_fee <- order %>%
+  inner_join(select(order, category_fee), by = "product_id"
+            
